--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>blog of ShellHong</title>
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
+    <meta name="keyword" content="博客、shellhong、blog">
     <style media="screen">
       body{
         background: #F0FCFF url(./export/images/island.png) repeat-x 100% -460px;
