change viewport width

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>blog of ShellHong</title>
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
+    <meta name="viewport" content="width=1000,user-scalable=no,initial-scale=1.0">
     <meta name="keyword" content="博客、shellhong、blog">
     <style media="screen">
       body{
