optimize index.js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" id="inputText" value="HELLO" />
         <input type="submit" value="TRY IT" />
     </form>
+    <div id='entrance' class='entrance'></div>
     </div>
     <script src='./src/js/index/TweenLite.min.js'></script>
     <script src='./src/js/index/easeljs-0.7.1.min.js'></script>
