--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>blog of ShellHong</title>
     <meta name="keyword" content="博客、shellhong、blog">
-    <link rel="stylesheet" href="./export/css/index.css" media="screen" type="text/css" />
+    <link rel="stylesheet" href="./index/index.css" media="screen" type="text/css" />
   </head>
   <body>
     <canvas id="text" width="500" height="100"></canvas>
@@ -15,9 +15,9 @@
     </form>
     <div id='entrance' class='entrance'></div>
     </div>
-    <script src='./export/js/index/TweenLite.min.js'></script>
-    <script src='./export/js/index/easeljs-0.7.1.min.js'></script>
-    <script src='./export/js/index/requestAnimationFrame.js'></script>
-    <script src="./export/js/index/index.js"></script>
+    <script src='./index/TweenLite.min.js'></script>
+    <script src='./index/easeljs-0.7.1.min.js'></script>
+    <script src='./index/requestAnimationFrame.js'></script>
+    <script src="./index/index.js"></script>
   </body>
 </html>
