--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>blog of ShellHong</title>
     <meta name="keyword" content="博客、shellhong、blog">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="./index/index.css" media="screen" type="text/css" />
   </head>
   <body>
