add deeplin flow test

--- a/wiki/tools/index.html
+++ b/wiki/tools/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <p>
+      <p style='color:red;margin-bottom: 5px;'>请使用https</p>
       <input id='url' class='url-input' type='text' placeholder='填入页面路径'/>
       <button id='sure'>确定</button>
     </p>
