修复nodelist foreach兼容问题

--- a/src/r/stacking-context/index.html
+++ b/src/r/stacking-context/index.html
@@ -51,9 +51,10 @@
 <li>在"will-change"中指定了任意CSS属性，即便你没有直接指定这些属性的值</li>
 </ul>
 
-<h3>z-index: auto/0</h3>
+<h3>z-index</h3>
 
 <ul>
+<li>z-index只对定位元素生效</li>
 <li>从层叠顺序来说，"z-index"值为"auto"或0，顺序是一样的</li>
 <li>但是从形成层叠上下文的角度来说，它们又是有区别的（例如：上面提及的，包含"z-index"值不为"auto"的那些条件）</li>
 </ul>
@@ -96,7 +97,8 @@
 <ul>
 <li><p>定位元素</p>
 
-<ul><li>元素一旦成为定位元素，其z-index就会自动生效，此时其z-index就是默认的auto，也就是0级别</li>
+<ul><li>position属性值设置除默认值static以外的元素，包括relative，absolute，fixed</li>
+<li>元素一旦成为定位元素，其z-index就会自动生效，此时其z-index就是默认的auto，也就是0级别</li>
 <li>而层叠上下文元素的层叠顺序也是z-index:auto级别</li>
 <li>所以，定位元素和层叠上下文元素是同等级别的，并且高于普通元素</li></ul></li>
 </ul>
@@ -131,11 +133,12 @@
     editor.setOption("maxLines", 30);
     return editor;
   }
-  document.querySelectorAll('.editor').forEach(function(el, index){
-    request_get('../../files/stacking-context/' + (index + 1) + '.html', function(r){
-      createEditor(el, r);
+  var nodes = document.querySelectorAll('.editor');
+  for(var i = 0, ilen = nodes.length; i < ilen; i++){
+    request_get('../../files/stacking-context/' + (i + 1) + '.html', function(r){
+      createEditor(nodes[i], r);
     });
-  });
+  }
 </script>
 
 {% endblock %}
