--- a/navxxx/work_nav.html
+++ b/navxxx/work_nav.html
@@ -9,17 +9,17 @@
 {% endblock %}
 
 {% block content %}
-	  <a class='item_title' href="work/team/index.html">团队纲要</a>
+	  <a class='item_title' href="../export/views/work/team/index.html">团队纲要</a>
 		<p>
 			团队管理与发展的大体纲要和一些感悟
 			<span class='nav_time'>2017-9-2</span>
 		</p>
-	  <a class='item_title' href="work/cache/index.html">关于缓存</a>
+	  <a class='item_title' href="../export/views/work/cache/index.html">关于缓存</a>
 		<p>
 			讲述现阶段常用的几个缓存方案以及一些技术要点
 			<span class='nav_time'>2017-9-6</span>
 		</p>
-	  <a class='item_title' href="../r/stacking-context/index.html">css层叠规则</a>
+	  <a class='item_title' href="../export/r/stacking-context/index.html">css层叠规则</a>
 		<p>
 			讲述css层叠上下文和层叠顺序的相关规律（含实例）
 			<span class='nav_time'>2017-9-13</span>
