--- a/navxxx/work_nav.html
+++ b/navxxx/work_nav.html
@@ -24,6 +24,11 @@
 			讲述css层叠上下文和层叠顺序的相关规律（含实例）
 			<span class='nav_time'>2017-9-13</span>
 		</p>
+		<a class='item_title' href="../export/views/work/activity/index.html">活动架构</a>
+		<p>
+			开发的担当：通过优秀的架构，提高各方工作效能！
+			<span class='nav_time'>2017-9-20</span>
+		</p>
 {% endblock %}
 
 {% block footer_extend %}
