--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -27,7 +27,12 @@
 		<a class='item_title' href="../export/views/work/activity/index.html">活动架构</a>
 		<p>
 			开发的担当：通过优秀的架构，提高各方工作效能！
-			<span class='nav_time'>2017-9-20</span>
+			<ul>
+			  <li>如何最小化接入代价</li>
+			  <li>如何最大化开发效能</li>
+			  <li>如何统一化公共流程</li>
+			</ul>
+			<span class='nav_time'>2017-9-21</span>
 		</p>
 {% endblock %}
 
