update deeplink test

--- a/wiki/tools/deeplink-test/index.html
+++ b/wiki/tools/deeplink-test/index.html
@@ -59,7 +59,7 @@
           此页面仅做正确性验证，体验效果和实际情况，可能存在一定差异
         </li>
         <li>
-          在手机浏览器（魅族手机和浏览器，效果更加）中访问该网页，模拟测试你的deeplink链接是否能正常跳转
+          在手机浏览器（魅族手机和浏览器，效果更佳）中访问该网页，模拟测试你的deeplink链接是否能正常跳转
         </li>
       </ul>
     </div>
