--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+	  <a class='item_title' href="https://docs.google.com/presentation/d/1jww846M3lZoPTb5OOOINMcMEv6UZfPWkNvBLye5bS8g/edit#slide=id.g2398ef0b51_0_0">前端监控平台分享</a>
+		<p>
+			关于前端监控平台的搭建、架构、使用等的ppt
+			<span class='nav_time'>2017-8-10</span>
+		</p>
 	  <a class='item_title' href="../export/views/work/team/index.html">团队纲要</a>
 		<p>
 			团队管理与发展的大体纲要和一些感悟
