--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -34,6 +34,11 @@
 			</ul>
 			<span class='nav_time'>2017-9-21</span>
 		</p>
+		<a class='item_title' href="../export/views/work/carousel/index.html">移动端图片轮播组件实现</a>
+		<p>
+			网上找不到合适的，自撸一个！
+			<span class='nav_time'>2017-10-20</span>
+		</p>
 {% endblock %}
 
 {% block footer_extend %}
