--- a/effect/carousel/index-scale.html
+++ b/effect/carousel/index-scale.html
@@ -13,20 +13,20 @@
       overflow: hidden;
     }
   </style>
-  <script type="text/javascript" src="./index_c24b8cdb.js"></script>
+  <script type="text/javascript" src="./index_fabd35dd.js"></script>
 </head>
 <body>
 		<div class="sky-carousel"></div>
     <div style='color:red;text-align:center;font-size:60px;margin-top:100px;'>仅支持移动端</div>
     <script type="text/javascript">
     		carousel.init(document.querySelector('.sky-carousel'), [
-          './images/1.jpg',
-          './images/2.jpg',
-          './images/3.jpg',
-          './images/4.jpg',
-          './images/5.jpg',
-          './images/6.jpg',
-          './images/7.jpg'
+          './img/1_14731692.jpg',
+          './img/2_6314aecb.jpg',
+          './img/3_105dba92.jpg',
+          './img/4_ba65a967.jpg',
+          './img/5_e841a8a7.jpg',
+          './img/6_3d7b784c.jpg',
+          './img/7_a404afb4.jpg'
         ], {
           type: 'scale',
           gap: '10%',//图片与容器左右两边的距离，可为数字（像素值）或字符串（百分比，相对于容器宽度）
