--- a/src/effect/carousel/index-base.html
+++ b/src/effect/carousel/index-base.html
@@ -20,13 +20,13 @@
     <div style='color:red;text-align:center;font-size:60px;margin-top:100px;'>仅支持移动端</div>
     <script type="text/javascript">
     		carousel.init(document.querySelector('.sky-carousel'), [
-          './images/1.jpg',
-          './images/2.jpg',
-          './images/3.jpg',
-          './images/4.jpg',
-          './images/5.jpg',
-          './images/6.jpg',
-          './images/7.jpg'
+          './img/1.jpg',
+          './img/2.jpg',
+          './img/3.jpg',
+          './img/4.jpg',
+          './img/5.jpg',
+          './img/6.jpg',
+          './img/7.jpg'
         ], {
           isAutoCarousel: true//是否自动轮播
         });
