--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -39,6 +39,11 @@
 			网上找不到合适的，自撸一个！
 			<span class='nav_time'>2017-10-20</span>
 		</p>
+		<a class='item_title' href="https://github.com/shellhong6/vue-tabs">一个基于vue2.x的移动端tabs切换组件</a>
+		<p>
+			网上找不到合适的，自撸一个！
+			<span class='nav_time'>2017-10-27</span>
+		</p>
 {% endblock %}
 
 {% block footer_extend %}
