--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -44,13 +44,22 @@
 			网上找不到合适的，自撸一个！
 			<span class='nav_time'>2017-10-27</span>
 		</p>
+		<a class='item_title' href="../export/views/work/re-activity/index.html">联合活动重构</a>
+		<p>
+			<ul>
+			  <li>协同与解耦</li>
+			  <li>规范与统一</li>
+			  <li>门槛与效率</li>
+			</ul>
+			<span class='nav_time'>2017-11-24</span>
+		</p>
 		<a class='item_title' href="../export/views/work/summary/index.html">2017年终总结</a>
 		<p>
 			<ul>
 			  <li>时光荏苒，一年飞逝</li>
 			  <li>值此之际，好坏自知，一切如字</li>
 			</ul>
-			<span class='nav_time'>2017-11-4</span>
+			<span class='nav_time'>2017-11-24</span>
 		</p>
 {% endblock %}
 
