--- a/effect/carousel/index-parallel-simple.html
+++ b/effect/carousel/index-parallel-simple.html
@@ -28,7 +28,15 @@
           './img/6_3d7b784c.jpg',
           './img/7_a404afb4.jpg'
         ], {
-          isAutoCarousel: true,//是否自动轮播
+          type: 'parallel-simple',
+          width: '70%',
+          marginR: 10,
+          isAutoCarousel: true,
+          animateTime: .2,
+          autoCarouselTime: 5000,
+          startX: 30,
+          dragHolder: 120,
+          effectDistance: 20,
           isSort: true
         });
     </script>
