--- a/effect/carousel/index-scale.html
+++ b/effect/carousel/index-scale.html
@@ -13,7 +13,7 @@
       overflow: hidden;
     }
   </style>
-  <script type="text/javascript" src="./index_fabd35dd.js"></script>
+  <script type="text/javascript" src="./index_b21f378b.js"></script>
 </head>
 <body>
 		<div class="sky-carousel"></div>
@@ -31,7 +31,8 @@
           type: 'scale',
           gap: '10%',//图片与容器左右两边的距离，可为数字（像素值）或字符串（百分比，相对于容器宽度）
           rate: .8,//缩放比例
-          isAutoCarousel: true//是否自动轮播
+          isAutoCarousel: true,//是否自动轮播
+          isSort: true
         });
     </script>
 </body>
