--- a/src/effect/carousel/index-base.html
+++ b/src/effect/carousel/index-base.html
@@ -28,7 +28,8 @@
           './img/6.jpg',
           './img/7.jpg'
         ], {
-          isAutoCarousel: true//是否自动轮播
+          isAutoCarousel: true,//是否自动轮播
+          isSort: true
         });
     </script>
 </body>
