--- a/effect/meteor/index.html
+++ b/effect/meteor/index.html
@@ -41,7 +41,7 @@
   <div class="wrap">
     <canvas width="2000" height="1400"></canvas>
   </div>
-  <script src="./index_fabd35dd.js"></script>
+  <script src="./index_a6df6ec2.js"></script>
 </body>
 
 </html>
