--- a/src/effect/meteor/index.html
+++ b/src/effect/meteor/index.html
@@ -41,7 +41,7 @@
   <div class="wrap">
     <canvas width="2000" height="1400"></canvas>
   </div>
-  <script src="./index.js"></script>
+  <script type="text/javascript" src="./js/index.js"></script>
 </body>
 
 </html>
