--- a/nav5678/work_nav.html
+++ b/nav5678/work_nav.html
@@ -31,7 +31,12 @@
 
         <section id="main-content"><!--内容主体-->
           
-	  <a class='item_title' href="https://docs.google.com/presentation/d/1jww846M3lZoPTb5OOOINMcMEv6UZfPWkNvBLye5bS8g/edit#slide=id.g2398ef0b51_0_0">前端监控平台分享</a>
+	  <a class='item_title' href="../export/views/work/monitor/index.html">前端监控平台分享</a>
+		<p>
+			关于前端监控平台的搭建、架构、使用等
+			<span class='nav_time'>2018-3-13</span>
+		</p>
+		<a class='item_title' href="https://docs.google.com/presentation/d/1jww846M3lZoPTb5OOOINMcMEv6UZfPWkNvBLye5bS8g/edit#slide=id.g2398ef0b51_0_0">前端监控平台分享</a>
 		<p>
 			关于前端监控平台的搭建、架构、使用等的ppt
 			<span class='nav_time'>2017-8-10</span>
