--- a/nav5678/work_nav.html
+++ b/nav5678/work_nav.html
@@ -31,6 +31,11 @@
 
         <section id="main-content"><!--内容主体-->
           
+	  <a class='item_title' href="../export/views/work/dependencies/index.html">关于package.json中的包配置</a>
+		<p>
+			简单讲解package.json中dependencies、devDependencies、peerDependencies
+			<span class='nav_time'>2018-3-15</span>
+		</p>
 	  <a class='item_title' href="../export/views/work/monitor/index.html">viewport与单位</a>
 		<p>
 			viewport概念、像素概念与各种单位简要说明
