--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+	  <a class='item_title' href="../export/views/work/dependencies/index.html">关于package.json中的包配置</a>
+		<p>
+			简单讲解package.json中dependencies、devDependencies、peerDependencies
+			<span class='nav_time'>2018-3-15</span>
+		</p>
 	  <a class='item_title' href="../export/views/work/monitor/index.html">viewport与单位</a>
 		<p>
 			viewport概念、像素概念与各种单位简要说明
