--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+	  <a class='item_title' href="../export/views/work/irregularity/index.html">关于不规则形状事件响应实现</a>
+		<p>
+			多种方式实现不规则形状事件响应
+			<span class='nav_time'>2018-3-29</span>
+		</p>
 	  <a class='item_title' href="../export/views/work/dependencies/index.html">关于package.json中的包配置</a>
 		<p>
 			简单讲解package.json中dependencies、devDependencies、peerDependencies
