--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -29,11 +29,11 @@
 			关于前端监控平台的搭建、架构、使用等
 			<span class='nav_time'>2018-3-12</span>
 		</p>
-		<a class='item_title' href="https://docs.google.com/presentation/d/1jww846M3lZoPTb5OOOINMcMEv6UZfPWkNvBLye5bS8g/edit#slide=id.g2398ef0b51_0_0">前端监控平台分享</a>
+		<!-- <a class='item_title' href="https://docs.google.com/presentation/d/1jww846M3lZoPTb5OOOINMcMEv6UZfPWkNvBLye5bS8g/edit#slide=id.g2398ef0b51_0_0">前端监控平台分享</a>
 		<p>
 			关于前端监控平台的搭建、架构、使用等的ppt
 			<span class='nav_time'>2017-8-10</span>
-		</p>
+		</p> -->
 	  <a class='item_title' href="../export/views/work/cache/index.html">关于缓存</a>
 		<p>
 			讲述现阶段常用的几个缓存方案以及一些技术要点
