--- a/effect/meteor/index.html
+++ b/effect/meteor/index.html
@@ -41,7 +41,7 @@
   <div class="wrap">
     <canvas width="2000" height="1400"></canvas>
   </div>
-  <script type="text/javascript" src="./js/index_a6df6ec2.js"></script>
+  <script type="text/javascript" src="./js/index_b21f378b.js"></script>
 </body>
 
 </html>
