--- a/src/effect/tree/tree.html
+++ b/src/effect/tree/tree.html
@@ -9,13 +9,23 @@
     html,
     body {
       height: 100%;
+      margin: 0;
+      padding: 0;
+      background: -webkit-linear-gradient(top, #fff5f5, #ffecf0);
+      /* Safari 5.1 - 6.0 */
+      background: -o-linear-gradient(top, #fff5f5, #ffecf0);
+      /* Opera 11.1 - 12.0 */
+      background: -moz-linear-gradient(top, #fff5f5, #ffecf0);
+      /* Firefox 3.6 - 15 */
+      background: linear-gradient(to top, #fff5f5, #ffecf0);
+      /* 标准的语法 */
     }
 
     svg {
       margin: 0 auto;
-    	width: 840px;
-    	height: 600px;
-    	font-family: helvetica, sans-serif;
+      width: 100%;
+      height: 100%;
+      font-family: helvetica, sans-serif;
     }
 
     path,
@@ -23,15 +33,60 @@
       stroke: #777;
     }
 
-    .svgField{
+    .svgField {
       height: 100%;
+    }
+    svg:first-of-type{
+      position: relative;
+      z-index: 2;
+    }
+    .people{
+      width: 640px;
+      height: 480px;
+      position: absolute;
+      bottom: -410px;
+      z-index: 1;
+    }
+
+    path:first-child {
+      stroke-dasharray: 1440;
+      stroke-dashoffset: 1440;
+      animation: dash 5s linear;
+      -webkit-animation: dash 5s linear;
+      animation-fill-mode: forwards;
+    }
+
+    path:nth-of-type(2) {
+      stroke-dasharray: 226;
+      stroke-dashoffset: 226;
+      animation: dash 3s linear;
+      -webkit-animation: dash 3s linear;
+      animation-fill-mode: forwards;
+    }
+    path:nth-of-type(3) {
+      stroke-dasharray: 400;
+      stroke-dashoffset: 400;
+      animation: dash 5s linear;
+      -webkit-animation: dash 5s linear;
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes dash {
+      to {
+        stroke-dashoffset: 0;
+      }
     }
   </style>
 </head>
 
 <body>
-  <div class="svgField"><svg></svg></div>
-  <script src="./javascript/d3.v3.min.js" charset="utf-8"></script>
+  <div class="svgField">
+    <svg></svg>
+    <svg id='people' class='people'></svg>
+  </div>
+  <!-- <script src="./javascript/d3.v3.min.js" charset="utf-8"></script> -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+
   <script type="text/javascript">
     /* D3 Tree */
     /* Copyright 2013 Peter Cook (@prcweb); Licensed MIT */
@@ -39,18 +94,21 @@
     // Tree configuration
     var flowers = [];
     var branches = [];
+    var offsetH = 30;
+    var startH = window.innerHeight - offsetH;
     var seed = {
       i: 0,
-      x: 420,
-      y: 600,
+      x: window.innerWidth - 350,
+      y: startH,
       a: 0,
-      l: 130,
+      l: 120,
       d: 0
     }; // a = angle, l = length, d = depth
     var da = 0.5; // Angle delta
     var dl = 0.8; // Length delta (factor)
     var ar = 0.7; // Randomness
     var maxDepth = 10;
+    var angle = da;
 
     // Tree creation functions
     function branch(b) {
@@ -59,18 +117,22 @@
 
       branches.push(b);
 
-      if (b.d === maxDepth){
+      if (b.d === maxDepth) {
         flowers.push(b);
         return;
       }
-
       // Left branch
       daR = ar * Math.random() - ar * 0.5;
+      if (b.d < 3) {
+        angle = .4;
+      } else {
+        angle = da;
+      }
       newB = {
         i: branches.length,
         x: end.x,
         y: end.y,
-        a: b.a - da + daR,
+        a: b.a - angle + daR,
         l: b.l * dl,
         d: b.d + 1,
         parent: b.i
@@ -79,11 +141,16 @@
 
       // Right branch
       daR = ar * Math.random() - ar * 0.5;
+      if (b.d < 3) {
+        angle = .3;
+      } else {
+        angle = da;
+      }
       newB = {
         i: branches.length,
         x: end.x,
         y: end.y,
-        a: b.a + da + daR,
+        a: b.a + angle + daR,
         l: b.l * dl,
         d: b.d + 1,
         parent: b.i
@@ -91,16 +158,20 @@
       branch(newB);
     }
 
-    function regenerate(initialise) {
+    function regenerate() {
       branches = [];
       branch(seed);
-      initialise ? create() : update();
+      create();
     }
 
     function endPt(b) {
       // Return endpoint of branch
-      var x = b.x + b.l * Math.sin(b.a);
-      var y = b.y - b.l * Math.cos(b.a);
+      var l = b.l;
+      if (b.d < 2) {
+        l += 50;
+      }
+      var x = b.x + l * Math.sin(b.a);
+      var y = b.y - l * Math.cos(b.a);
       return {
         x: x,
         y: y
@@ -134,67 +205,165 @@
       }
     }
 
+    function fall() {
+      var len = flowers.length;
+      var index = 0;
+      var stepAmount = 1000;
+      var stepTime = 16;
+      var amount = Math.floor(Math.random() * 5);
+      var arr = [];
+
+      for(var i = 0; i < amount; i++){
+        index = Math.floor(Math.random() * len);
+        flowers.push(flowers[index]);
+      }
+
+      var s = d3.select('svg')
+      .selectAll('circle')
+      .data(flowers)
+      .enter()
+      .append('circle')
+      .attr('cx', x2)
+      .attr('cy', y2)
+      .attr('fill', '#f7acbc')
+      .attr('r', 5)
+      .style("filter", "url(#Gaussian_Blur)");
+
+      var step = window.innerHeight/stepAmount;
+      for(var n = 0; n < stepAmount; n++){
+        s.transition()
+        .delay(function(d, i) {
+            return n * stepTime;
+        })
+        .duration(stepTime)
+        // .attr('cx', function(d){
+        //   return x2(d) + Math.random() * 5;
+        // })
+        .attr('cy', function(d){
+          var r = y2(d) + n * step + step * Math.random();
+            return r;
+        });
+      }
+      s.transition()
+      .delay(function(d, i) {
+        return stepTime * stepAmount;
+      })
+      .duration(1000)
+      .attr('fill-opacity', 0);
+
+      setTimeout(function(){
+        s.remove();
+        flowers.splice(len, amount);
+        fall();
+      }, stepTime * stepAmount + 5000);
+    }
+
     function create() {
       var stepDelay = 10;
       var flowStepDelay = 10;
       var duration = 500;
-      d3.select('svg')
-        .selectAll('line')
-        .data(branches)
-        .enter()
-        .append('line')
-        .attr('x1', x1)
-        .attr('y1', y1)
-        .attr('x2', x1)
-        .attr('y2', y1)
-        .style('stroke-width', function(d) {
-          return parseInt(maxDepth + 1 - d.d) + 'px';
-        })
-        .attr('id', function(d) {
-          return 'id-' + d.i;
-        })
-        // .on('mouseover', highlightParents)
-        // .on('mouseout', highlightParents)
-        .transition()
-    		.delay(function(d,i){
-    			return i * stepDelay;
-    		})
-    		.duration(duration)
-    		.ease("linear")
-        .attr('x2', x2)
-        .attr('y2', y2);
+      var svg = d3.select('svg');
+      var halfW = window.innerWidth / 3;
+      var qW = halfW / 2;
+      var bottomH = 2;
 
-        setTimeout(function(){
-          d3.select('svg')
-            .append("defs")
+      svg.append('path')
+        .style('stroke', '#cacaca')
+        .style('stroke-width', bottomH)
+        .attr('d', 'm0,' + (window.innerHeight - bottomH) + 'h' + halfW + 'c' + (halfW + halfW/6) + ',-65 ' + (halfW + halfW/4) + ',-45 ' + (window.innerWidth) + ',0')
+        .attr('fill', '#d4d4d4')
+        .attr('fill-opacity', 0)
+        .transition()
+        .delay(function(d, i) {
+          return 5000;
+        })
+        .duration(500)
+        .attr('fill-opacity', 1);
+
+      setTimeout(function(){
+        svg.selectAll('line')
+          .data(branches)
+          .enter()
+          .append('line')
+          .attr('x1', x1)
+          .attr('y1', y1)
+          .attr('x2', x1)
+          .attr('y2', y1)
+          .style('stroke-width', function(d) {
+            return parseInt(maxDepth + 1 - d.d) + 'px';
+          })
+          .attr('id', function(d) {
+            return 'id-' + d.i;
+          })
+          // .on('mouseover', highlightParents)
+          // .on('mouseout', highlightParents)
+          .transition()
+          .delay(function(d, i) {
+            return i * stepDelay;
+          })
+          .duration(duration)
+          // .ease("linear")
+          .attr('x2', x2)
+          .attr('y2', y2);
+
+        setTimeout(function() {
+          svg.append("defs")
             .append("filter")
             .attr("id", "Gaussian_Blur")
             .append("feGaussianBlur")
             .attr("in", "SourceGraphic")
             .attr("stdDeviation", 2);
 
-
-          d3.select('svg')
-            .selectAll('circle')
+            svg.selectAll('circle')
             .data(flowers)
             .enter()
             .append('circle')
             .attr('cx', x2)
             .attr('cy', y2)
             .attr('r', 0)
-            .attr('fill', 'pink')
+            .attr('fill', '#f7acbc')
             .transition()
-        		.delay(function(d,i){
-        			return i % 3;
-        		})
-        		.duration(duration)
+            .delay(function(d, i) {
+              return i % 3;
+            })
+            .duration(duration)
             .attr('r', 5)
             .style("filter", "url(#Gaussian_Blur)");
 
+          setTimeout(function(){
+            svg.append('path')
+              .style('stroke', '#a58b8b')
+              .style('stroke-width', 1)
+              .attr('d', 'm'+qW+','+(window.innerHeight - bottomH - bottomH - 13) + 'h100v13h-100v-13')
+              .attr('fill', '#a68b9b')
+              .attr('fill-opacity', 0)
+              .transition()
+              .delay(function(d, i) {
+                return 3000;
+              })
+              .duration(500)
+              .attr('fill-opacity', 1);
+
+              setTimeout(function(){
+                document.getElementById('people').style.left = qW + 'px';
+                d3.select('#people')
+                  .append('path')
+                  .style('stroke', '#4a4a4a')
+                  .style('stroke-width', 1.5)
+                  .attr('d', 'm102.36685,19.712079c-3.509374,3.348599 -18.622442,7.595834 -20.571686,7.595834l-16.566741,0c-2.749499,0 -6.890267,0.463507 -8.839511,1.526104c0.223924,0.170268 0.447849,0.340536 0.664432,0.513956c1.497724,1.195027 4.999757,2.878786 8.097991,2.878786c1.457345,0 2.654056,-0.362607 3.670893,-1.1162c4.324312,-3.175178 6.570899,-3.547245 7.874066,-3.547245c1.545446,0 2.874309,0.60855 3.65621,1.6743c1.468357,1.973845 0.389115,4.556239'+ '-0.712153,6.580533c-2.635701,4.805334 -11.225592,9.998501 -20.538648,9.998501c-0.007342,0 -0.007342,0 -0.014684,0c-1.299496,0 -2.573296,-0.104053 -3.792033,-0.312158l0,10.250749c0,2.339605 3.792033,7.986819 15.296612,7.986819s14.518383,-11.669647 14.518383,-13.678176l0,-14.226817c8.186092,-3.685982 16.56307,-5.691357 20.571686,-12.28135c3.770007,-6.192701 0.190886,-7.192236 -3.314817,-3.843637zm-25.732962,14.901582c2.922031,-5.357128 -0.194557,-5.357128'+ '-5.653176,-1.34007s-13.453824,0.331076 -16.181298,-1.844567c-2.727474,-2.17249 -5.454947,-3.84679 -10.329894,-3.679675c-4.874946,0.167115 -16.372184,-0.50765 -23.005488,-1.844567c-6.625962,-1.34007 -17.969023,-9.45932 -18.9051,-7.362504c-0.976458,2.175644 0.774558,3.682828 4.287603,7.362504c3.505703,3.685982 18.629783,8.75933 18.629783,8.75933s0,10.887677 0,15.406079c0,4.524708 10.913566,11.382715 16.56307,11.382715s9.940779,-3.348599'+ '9.940779,-5.69451l0,-14.226817c9.357107,4.193632 21.731688,-1.557635 24.653719,-6.917916zm-5.873429,-11.953427c6.402038,0 11.596352,-4.458493 11.596352,-9.957511c0,-5.502171 -5.194314,-9.960664 -11.596352,-9.960664s-11.592681,4.458493 -11.592681,9.960664c0,5.499018 5.190643,9.957511 11.592681,9.957511zm-30.552845,0c6.402038,0 11.592681,-4.458493 11.592681,-9.957511c0,-5.502171 -5.190643,-9.960664 -11.592681,-9.960664c-6.405709,0 -11.596352,4.458493'+ '-11.596352,9.960664c0,5.499018 5.186972,9.957511 11.596352,9.957511z')
+                  .attr('fill-opacity', 0);
+
+                // setTimeout(fall, 1000);
+
+              }, 4000);
+
+          }, 500);
+
         }, branches.length * stepDelay + duration);
+      }, 6000);
     }
 
-    regenerate(true);
+    regenerate();
   </script>
 </body>
 
