--- a/effect/tree/index.html
+++ b/effect/tree/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="viewport" content="width=1000, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="./css/index_100851ba.css">
+  <link rel="stylesheet" href="./css/index_679ce8ac.css">
 </head>
 
 <body>
@@ -14,8 +14,14 @@
     <svg id='people' class='people'></svg>
     <audio src="../../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
   </div>
-  <script src="../../export/files/js/d3.v5.min.js"></script>
-  <script src="./javascript/index_b21f378b.js"></script>
+  <script src="https://d3js.org/d3-color.v1.min.js"></script>
+  <script src="https://d3js.org/d3-dispatch.v1.min.js"></script>
+  <script src="https://d3js.org/d3-ease.v1.min.js"></script>
+  <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+  <script src="https://d3js.org/d3-selection.v1.min.js"></script>
+  <script src="https://d3js.org/d3-timer.v1.min.js"></script>
+  <script src="https://d3js.org/d3-transition.v1.min.js"></script>
+  <script src="./javascript/main_58a2519d.js"></script>
 </body>
 
 </html>
