--- a/src/effect/tree/index.html
+++ b/src/effect/tree/index.html
@@ -14,16 +14,14 @@
     <svg id='people' class='people'></svg>
     <audio src="../../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
   </div>
-  <script src="../../export/files/js/d3/d3-color.v1.min.js"></script>
-  <script src="../../export/files/js/d3/d3-dispatch.v1.min.js"></script>
-  <script src="../../export/files/js/d3/d3-ease.v1.min.js"></script>
-  <script src="../../export/files/js/d3/d3-interpolate.v1.min.js"></script>
-  <script src="../../export/files/js/d3/d3-selection.v1.min.js"></script>
-  <script src="../../export/files/js/d3/d3-timer.v1.min.js"></script>
-  <script src="../../export/files/js/d3/d3-transition.v1.min.js"></script>
-  <script>
-  // <script src="../../export/files/js/d3/d3.v5.min.js"></script>
-  <script src="./javascript/index.js"></script>
+  <script src="https://d3js.org/d3-color.v1.min.js"></script>
+  <script src="https://d3js.org/d3-dispatch.v1.min.js"></script>
+  <script src="https://d3js.org/d3-ease.v1.min.js"></script>
+  <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+  <script src="https://d3js.org/d3-selection.v1.min.js"></script>
+  <script src="https://d3js.org/d3-timer.v1.min.js"></script>
+  <script src="https://d3js.org/d3-transition.v1.min.js"></script>
+  <script src="./javascript/main.js"></script>
 </body>
 
 </html>
