--- a/kanghuazhen/work_nav.html
+++ b/kanghuazhen/work_nav.html
@@ -12,7 +12,7 @@
   <div class="svgField">
     <svg class='evn'></svg>
     <svg id='people' class='people'></svg>
-    <audio src="../../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
+    <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
   </div>
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
   <script src="https://d3js.org/d3-dispatch.v1.min.js"></script>
