--- a/kanghuazhen/work_nav.html
+++ b/kanghuazhen/work_nav.html
@@ -6,6 +6,7 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/typing.css">
 </head>
 
 <body>
@@ -14,6 +15,14 @@
     <svg id='people' class='people'></svg>
     <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
   </div>
+  <div id="source" style='display:none;'>
+    这里的呈现效果是有鼠标跟随的！
+    <br /> 还不错吧？
+  </div>
+  <div id="output-wrap" class='output-wrap'>
+    <span id="output"></span>
+    <span id='typing-cursor' class="typing-cursor">|</span>
+  </div>
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
   <script src="https://d3js.org/d3-dispatch.v1.min.js"></script>
   <script src="https://d3js.org/d3-ease.v1.min.js"></script>
@@ -21,6 +30,7 @@
   <script src="https://d3js.org/d3-selection.v1.min.js"></script>
   <script src="https://d3js.org/d3-timer.v1.min.js"></script>
   <script src="https://d3js.org/d3-transition.v1.min.js"></script>
+  <script src="./javascript/typing.js"></script>
   <script src="./javascript/main.js"></script>
 </body>
 
