--- a/kanghuazhen/work_nav.html
+++ b/kanghuazhen/work_nav.html
@@ -16,8 +16,13 @@
     <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
   </div>
   <div id="source" style='display:none;'>
-    这里的呈现效果是有鼠标跟随的！
-    <br /> 还不错吧？
+    这是一份契约<br/>
+    与上帝签订<br/>
+    我为你担保<br/><div>&nbsp;</div>
+
+    从此刻起<br/>
+    愿你快乐、幸福<br/>
+    遇见一切美好与幸运
   </div>
   <div id="output-wrap" class='output-wrap'>
     <span id="output"></span>
