--- a/kanghuazhen/work_nav.html
+++ b/kanghuazhen/work_nav.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <meta name="viewport" content="width=1000, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/typing.css">
 </head>
