--- a/src/effect/tree/work_nav.html
+++ b/src/effect/tree/work_nav.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>to 华珍</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/typing.css">
 </head>
 
 <body>
@@ -14,6 +15,19 @@
     <svg id='people' class='people'></svg>
     <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
   </div>
+  <div id="source" style='display:none;'>
+    这是一份契约<br/>
+    与上帝签订<br/>
+    我为你担保<br/><div>&nbsp;</div>
+
+    从此刻起<br/>
+    愿你快乐、幸福<br/>
+    遇见一切美好与幸运
+  </div>
+  <div id="output-wrap" class='output-wrap'>
+    <span id="output"></span>
+    <span id='typing-cursor' class="typing-cursor">|</span>
+  </div>
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
   <script src="https://d3js.org/d3-dispatch.v1.min.js"></script>
   <script src="https://d3js.org/d3-ease.v1.min.js"></script>
@@ -21,6 +35,7 @@
   <script src="https://d3js.org/d3-selection.v1.min.js"></script>
   <script src="https://d3js.org/d3-timer.v1.min.js"></script>
   <script src="https://d3js.org/d3-transition.v1.min.js"></script>
+  <script src="./javascript/typing.js"></script>
   <script src="./javascript/main.js"></script>
 </body>
 
