--- a/kanghuazhen/work_nav.html
+++ b/kanghuazhen/work_nav.html
@@ -14,6 +14,7 @@
     <svg class='evn'></svg>
     <svg id='people' class='people'></svg>
     <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
+    <div id="groundFill" class='groundFill'></div>
   </div>
   <div id="source" style='display:none;'>
     这是一份契约<br/>
