--- a/kanghuazhen/work_nav.html
+++ b/kanghuazhen/work_nav.html
@@ -13,7 +13,11 @@
   <div class="svgField">
     <svg class='evn'></svg>
     <svg id='people' class='people'></svg>
-    <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
+    <object data="../export/files/khz/bg.mp3" type="application/x-mplayer2" style='opcity:0;' width="0" height="0">
+      <param name="src" value="music.mp3">
+      <param name="autostart" value="1">
+      <param name="playcount" value="infinite">
+    </object>
   </div>
   <div id="source" style='display:none;'>
     这是一份契约<br/>
