--- a/src/effect/tree/work_nav.html
+++ b/src/effect/tree/work_nav.html
@@ -12,7 +12,12 @@
   <div class="svgField">
     <svg class='evn'></svg>
     <svg id='people' class='people'></svg>
-    <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio>
+    <object data="../export/files/khz/bg.mp3" type="application/x-mplayer2" width="0" height="0" style='opcity:0;'>
+      <param name="src" value="music.mp3">
+      <param name="autostart" value="1">
+      <param name="playcount" value="infinite">
+    </object>
+    <!-- <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' loop='loop' style='opcity:0;'></audio> -->
   </div>
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
   <script src="https://d3js.org/d3-dispatch.v1.min.js"></script>
