--- a/kanghuazhen/work_nav.html
+++ b/kanghuazhen/work_nav.html
@@ -14,11 +14,7 @@
     <svg class='evn'></svg>
     <svg id='people' class='people'></svg>
     <div id="groundFill" class='groundFill'></div>
-    <object data="../export/files/khz/bg.mp3" type="application/x-mplayer2" style='opcity:0;' width="0" height="0">
-      <param name="src" value="music.mp3">
-      <param name="autostart" value="1">
-      <param name="playcount" value="infinite">
-    </object>
+    <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' controls='controls'></audio>
   </div>
   <div id="source" style='display:none;'>
     这是一份契约<br/>
