--- a/nav1234/work_nav.html
+++ b/nav1234/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+	  <a class='item_title' href="../export/views/work/firstpaint/index.html">首屏测速</a>
+		<p>
+			介绍几种用于测试首屏加载速度的方法
+			<span class='nav_time'>2018-4-13</span>
+		</p>
 	  <a class='item_title' href="../export/views/work/irregularity/index.html">关于不规则形状事件响应实现</a>
 		<p>
 			多种方式实现不规则形状事件响应
