--- a/kanghuazhen/work_nav.html
+++ b/kanghuazhen/work_nav.html
@@ -19,11 +19,12 @@
   <div id="source" style='display:none;'>
     这是一份契约<br/>
     与上帝签订<br/>
-    我为你担保<br/><div>&nbsp;</div>
+    我作担保<br/><div>&nbsp;</div>
 
     从此刻起<br/>
     愿你快乐、幸福<br/>
-    遇见一切美好与幸运
+    遇见一切美好与幸运<br/>
+    成为一名牛逼的测试
   </div>
   <div id="output-wrap" class='output-wrap'>
     <span id="output"></span>
