--- a/nav5678/work_nav.html
+++ b/nav5678/work_nav.html
@@ -31,6 +31,11 @@
 
         <section id="main-content"><!--内容主体-->
           
+	  <a class='item_title' href="../export/r/rate-unit/index.html">百分比单位</a>
+		<p>
+			css中不同属性百分比单位的计算方式介绍
+			<span class='nav_time'>2018-4-19</span>
+		</p>
 	  <a class='item_title' href="../export/views/work/firstpaint/index.html">首屏测速</a>
 		<p>
 			介绍几种用于测试首屏加载速度的方法
