--- a/nav5678/work_nav.html
+++ b/nav5678/work_nav.html
@@ -31,6 +31,11 @@
 
         <section id="main-content"><!--内容主体-->
           
+		<a class='item_title' href="../export/r/element-ui/index.html">element-ui简单讲解</a>
+		<p>
+			element-ui大体框架、本地部署、调试简单讲解
+			<span class='nav_time'>2018-5-16</span>
+		</p>
 	  <a class='item_title' href="../export/r/rate-unit/index.html">百分比单位</a>
 		<p>
 			css中不同属性百分比单位的计算方式介绍
