--- a/toXXX/work_nav.html
+++ b/toXXX/work_nav.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>to 华珍</title>
+  <title>to XXX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/typing.css">
