--- a/src/effect/tree/work_nav.html
+++ b/src/effect/tree/work_nav.html
@@ -23,8 +23,7 @@
 
     从此刻起<br/>
     愿你快乐、幸福<br/>
-    遇见一切美好与幸运<br/>
-    成为一名牛逼的测试
+    遇见一切美好与幸运
   </div>
   <div id="output-wrap" class='output-wrap'>
     <span id="output"></span>
