--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+		<a class='item_title' href="../export/r/async/index.html">异步演进</a>
+		<p>
+			iterable -> Generator -> async await
+			<span class='nav_time'>2018-6-15</span>
+		</p>
 		<a class='item_title' href="../export/views/work/hierarchy/index.html">活动可配置化实现</a>
 		<p>
 			繁杂的需求如何提炼、架构并高效完成
