--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+		<a class='item_title' href="../export/views/work/promise/index.html">Promise原理浅析</a>
+		<p>
+			Promise原理浅析
+			<span class='nav_time'>2018-6-20</span>
+		</p>
 		<a class='item_title' href="../export/r/async/index.html">异步演进</a>
 		<p>
 			iterable -> Generator -> async await
