--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -31,6 +31,11 @@
 
         <section id="main-content"><!--内容主体-->
           
+		<a class='item_title' href="../export/views/work/promise/index.html">Promise原理浅析</a>
+		<p>
+			Promise原理浅析
+			<span class='nav_time'>2018-6-20</span>
+		</p>
 		<a class='item_title' href="../export/r/async/index.html">异步演进</a>
 		<p>
 			iterable -> Generator -> async await
