--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -111,6 +111,11 @@
 			讲述现阶段常用的几个缓存方案以及一些技术要点
 			<span class='nav_time'>2017-9-6</span>
 		</p>
+		<a class='item_title' href="../export/r/hybrid-app/index.html">Hybrid app开发历程分享</a>
+		<p>
+			早期，Hybrid app类型项目的一些开发历程分享
+			<span class='nav_time'>2015-11-24</span>
+		</p>
 {% endblock %}
 
 {% block footer_extend %}
