--- a/src/effect/carousel/ParallelCarousel.html
+++ b/src/effect/carousel/ParallelCarousel.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
-  <meta charset="UTF-8" />
   <style media="screen">
     body{
       margin: 0;
@@ -10,16 +9,23 @@
       width: 100%;
       height: 450px;
       position: relative;
+      background: white;
       overflow: hidden;
+      margin: 0 auto;
+    }
+    li{
+      box-sizing: border-box;
+      border: 1px solid blue;
     }
   </style>
-  <script type="text/javascript" src="./index.js"></script>
+  <script type="text/javascript" src="./ParallelCarousel.js"></script>
 </head>
 <body>
 		<div class="sky-carousel"></div>
-    <div style='color:red;text-align:center;font-size:60px;margin-top:100px;'>仅支持移动端</div>
     <script type="text/javascript">
-    		carousel.init(document.querySelector('.sky-carousel'), [
+      var carouselObj = new ParallelCarousel({
+        container: document.querySelector('.sky-carousel'),
+        data: [
           './img/1.jpg',
           './img/2.jpg',
           './img/3.jpg',
@@ -27,10 +33,14 @@
           './img/5.jpg',
           './img/6.jpg',
           './img/7.jpg'
-        ], {
-          isAutoCarousel: true,//是否自动轮播
-          isSort: true
-        });
+        ],
+        isSort: true,
+        auto: false,
+        liWidth: window.innerWidth * .7,
+        maxMarginL: 40,
+        marginR: 15
+      })
+      carouselObj.init()
     </script>
 </body>
 </html>
