--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-		<a class='item_title' href="/wiki/#!h5/index.md">网页读书项目技术实现</a>
+		<a class='item_title' href="/wiki/#!ebook/index.md">网页读书项目技术实现</a>
 		<p>
 			介绍一些基本的技术实现和难点
 			<span class='nav_time'>2018-11-20</span>
