--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -27,7 +27,7 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-    <a class='item_title' href="/wiki/#!h5/index.md">网页读书项目技术实现</a>
+    <a class='item_title' href="/wiki/#!ebook/index.md">网页读书项目技术实现</a>
 		<p>
 			介绍一些基本的技术实现和难点
 			<span class='nav_time'>2018-11-20</span>
