--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+		<a class='item_title' href="../export/r/vue-computed/index.html">Vue依赖收集与更新</a>
+		<p>
+			Vue依赖收集与更新的原理解析
+			<span class='nav_time'>2018-12-5</span>
+		</p>
 		<a class='item_title' href="/wiki/#!ebook/index.md">网页读书项目技术实现</a>
 		<p>
 			介绍一些基本的技术实现和难点
