--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="../export/css/common/font_92a0e396.css" type="text/css">
     <link rel="stylesheet" href="../export/css/common/style_1f6aed7d.css" media="screen" type="text/css">
     <link rel="stylesheet" href="../export/css/common/print_9fc78c3d.css" media="print" type="text/css">
+    
 	<style media="screen">
 		.item_title{
 			font-size: 18px;
 		}
 	</style>
+
     <title>ShellHong's Blog</title>
   </head>
   <body>
@@ -23,15 +25,22 @@
         <a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a>
       </div>
     </header>
+
     <div id="content-wrapper">
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-    <a class='item_title' href="/wiki/#!ebook/index.md">网页读书项目技术实现</a>
+          
+		<a class='item_title' href="../export/r/vue-computed/index.html">Vue依赖收集与更新</a>
+		<p>
+			Vue依赖收集与更新的原理解析
+			<span class='nav_time'>2018-12-5</span>
+		</p>
+		<a class='item_title' href="/wiki/#!ebook/index.md">网页读书项目技术实现</a>
 		<p>
 			介绍一些基本的技术实现和难点
 			<span class='nav_time'>2018-11-20</span>
-		</p>      
+		</p>
 		<a class='item_title' href="/wiki/#!bm/introduce.md">BM平台简介</a>
 		<p>
 			一秒输出一个页面不是梦想
