--- a/demo/interview/work_nav.html
+++ b/demo/interview/work_nav.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <script type="text/javascript">
-      location.href = '../js/index.js'
+      location.href = './js/index.js'
     </script>
   </body>
 </html>
