--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+		<a class='item_title' href="/demo/carousel/cssCarousel.html">纯CSS实现图片轮播</a>
+		<p>
+			纯CSS实现图片轮播的例子
+			<span class='nav_time'>2019-2-27</span>
+		</p>
 		<a class='item_title' href="../export/r/vue-computed/index.html">Vue依赖收集与更新</a>
 		<p>
 			Vue依赖收集与更新的原理解析
