--- a/demo/carousel/cssCarousel.html
+++ b/demo/carousel/cssCarousel.html
@@ -35,6 +35,7 @@
       flex-direction: row;
       height: 200px;
       border: 1px solid #ccc;
+      -webkit-scroll-behavior: smooth;
       scroll-behavior: smooth;
       overflow: hidden;
     }
