--- a/demo/reading/work_nav.html
+++ b/demo/reading/work_nav.html
@@ -19,10 +19,10 @@
   <div id="content-wrapper">
     <div class="inner clearfix">
       <section id="main-content">
-        <a class='item_title' href="/demo/carousel/cssCarousel.html" target='_blank'>纯CSS实现图片轮播</a>
+        <a class='item_title' href="./work/mayun.html" target='_blank'>马云，我的管理心得</a>
         <p>
-          纯CSS实现图片轮播的例子
-          <span class='nav_time'>2019-2-27</span>
+          其实最大的决心并不是我对互联网有很大的信心，而是我觉得做一件事，经历就是一种成功，你去闯一闯，不行可以掉头
+          <span class='nav_time'>2019-4-7</span>
         </p>
       </section>
     </div>
