--- a/demo/question/work_nav.html
+++ b/demo/question/work_nav.html
@@ -74,5 +74,24 @@ JavaScript 执行在单线程上，所有的代码都是排队执行。
 作用域链: 无论是 LHS 还是 RHS 查询，都会在当前的作用域开始查找，如果没有找到，就会向上级作用域继续查找目标标识符，每次上升一个作用域，一直到全局作用域为止。
       </code>
     </pre>
+    <h4>前端如何进行SEO优化</h4>
+    <pre>
+      <code>
+合理的title、description、keywords：搜索对着三项的权重逐个减小，title值强调重点即可；description把页面内容高度概括，不可过分堆砌关键词；keywords列举出重要关键词。
+语义化的HTML代码，符合W3C规范：语义化代码让搜索引擎容易理解网页
+重要内容HTML代码放在最前：搜索引擎抓取HTML顺序是从上到下，保证重要内容一定会被抓取
+重要内容不要用js输出：爬虫不会执行js获取内容
+少用iframe：搜索引擎不会抓取iframe中的内容
+非装饰性图片必须加alt
+提高网站速度：网站速度是搜索引擎排序的一个重要指标      
+
+前后端分离的项目如何SEO
+
+使用prerender
+先去 https://www.baidu.com/robots.txt 找出常见的爬虫，然后在nginx上判断来访问页面用户的User-Agent是否是爬虫，如果是爬虫，
+就用nginx方向代理到我们自己用nodejs + puppeteer实现的爬虫服务器上，然后用你的爬虫服务器爬自己的前后端分离的前端项目页面，
+增加扒页面的接收延时，保证异步渲染的接口数据返回，最后得到了页面的数据，返还给来访问的爬虫即可。
+      </code>
+    </pre>
   </body>
 </html>
