--- a/dandan/work_nav.html
+++ b/dandan/work_nav.html
@@ -14,7 +14,7 @@
     <svg class='evn'></svg>
     <svg id='people' class='people'></svg>
     <div id="groundFill" class='groundFill'></div>
-    <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' controls='controls' style="opacity:0;">></audio>
+    <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' controls='controls' style="opacity:0;"></audio>
   </div>
   <div id="source" style='display:none;'>
     这是一份契约<br/>
